typescript/checker/tests/conformance/interfaces/interfaceDeclarations/interfaceWithPropertyThatIsPrivateInBaseType.ts.stderr
error: ClassPropertyInitRequired {
    span: Span {
        lo: BytePos(
            236,
        ),
        hi: BytePos(
            246,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/interfaces/interfaceDeclarations/interfaceWithPropertyThatIsPrivateInBaseType.ts:2:13
  |
2 |     private x: number;
  |             ^^^^^^^^^^

error: ClassPropertyInitRequired {
    span: Span {
        lo: BytePos(
            343,
        ),
        hi: BytePos(
            348,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/interfaces/interfaceDeclarations/interfaceWithPropertyThatIsPrivateInBaseType.ts:10:13
   |
10 |     private x: T;
   |             ^^^^^

